# boards-of-django

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  dev-requirements.in  dev-requirements.txt  docker-compose.yml  factories.py  fixtures.json  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/: pull_request_template.md
.github/workflows/: django.yml
authentication/: apis.py  models.py  services.py  urls.py
authentication/migrations/: 0001_initial.py  0002_confirmationotp.py  0002_confirmationtoken.py
authentication/tests/: test_apis.py
authentication/tests/apis/: test_user_confirm_registration.py  test_user_register_and_login.py
authentication/tests/services/: test_user_activate.py  test_user_create.py
boards/: apis.py  filters.py  models.py  selectors.py  services.py  urls.py
boards/migrations/: 0001_initial.py  0002_post.py  0003_alter_board_name.py  0004_comment.py  0004_post_edited.py  0005_comment.py
boards/tests/: test_apis.py
boards_of_django/: settings.py  urls.py  wsgi.py
boards_of_django/authentication/: apis.py  apps.py  models.py  services.py  urls.py
boards_of_django/authentication/tests/apis/: test_user_confirm_registration.py  test_user_register_and_login.py
boards_of_django/authentication/tests/services/: test_user_activate.py  test_user_create.py
boards_of_django/boards/: apis.py  apps.py  models.py  selectors.py  services.py  urls.py
boards_of_django/boards/migrations/: 0002_post.py  0003_alter_board_name.py
boards_of_django/boards/tests/: test_apis.py
boards_of_django/common/: apps.py  models.py  pagination.py  services.py  utils.py
boards_of_django/common/tests/: test_utils.py
boards_of_django/tasks/: apps.py  celery.py
common/: models.py  services.py  utils.py
common/tests/: test_utils.py
config/: asgi.py  env.py  urls.py  wsgi.py
config/django/: base.py  production.py  settings.py
config/settings/: celery.py  email.py  swagger.py
docker/django/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  nginx.conf
tasks/: celery.py
